cha-pre-live-flux2/cha-eks-5b/namespaces/enfapi-dev/namespace-enfapi-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: enfapi-dev
  name: enfapi-dev
