cha-pre-live-flux2/cha-eks-5b/namespaces/enfapi-dev/network-policy-apps.yaml
####################################################
## Allow ingress from enfapi-dev and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-enfapi-dev
  namespace: enfapi-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: enfapi-dev
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from enfapi-dev ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-enfapi-dev
  namespace: enfapi-dev
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: enfapi-dev

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: enfapi-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: enfapi-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: enfapi-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

---

################
## ICIS monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: enfapi-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring
